[package]
name = "azure_attestion_test"
version = "0.1.0"
edition = "2024"

[dependencies]
az-tdx-vtpm = "0.7.4"
openssl = "0.10.74"
coco-provider =  { git = "https://github.com/automata-network/coco-provider-sdk", default-features = false}
chrono = "0.4.40"
hex = "0.4.3"
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
secp256k1 = { version = "0.30", features = ["rand", "recovery", "std", "serde"] }
schnorrkel = { version = "0.11.2", features = ["serde"] }
bincode = "1.3.3"
ureq = {version = "2.12.1",  features = ["json"] }
base64-url = "3.0.0"
dcap-rs = "0.1.0"
libc = "0.2.177"
x509-parser = "0.15.1"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
